fix z-index at footer

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 99;
   }
   .footer a {
     color: #000000;
